--- a/NewsPage.xaml
+++ b/NewsPage.xaml
@@ -1,12 +1,20 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SkelAppliences.NewsPage">
+             x:Class="SkelAppliences.NewsPage"
+             
+             BackgroundColor="Black">
+    
     <ScrollView>
         <StackLayout Padding="10">
             <Label Text="Новости" FontSize="24" FontAttributes="Bold" />
-            <Label Text="📢 Последние новости о бытовой технике..." />
+            <Label Text="📢 Последние новости о бытовой технике..." TextColor="White" />
             <!-- Здесь API с новостями -->
-            
+
+            <StackLayout.GestureRecognizers>
+                <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped"/>
+            </StackLayout.GestureRecognizers>
         </StackLayout>
+        
     </ScrollView>
+    
 </ContentPage>
