--- a/NewsPage.xaml
+++ b/NewsPage.xaml
@@ -7,7 +7,7 @@
     <ScrollView>
         <StackLayout Padding="10">
             <Label Text="Новости" FontSize="24" FontAttributes="Bold" />
-            <Label Text="📢 Последние новости о бытовой технике..." TextColor="White" />
+            <Label Text="📢 Последние новости о технике..." TextColor="White" />
             <!-- Здесь API с новостями -->
 
             <StackLayout.GestureRecognizers>
