--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:SkelAppliences"
+             xmlns:local="clr-namespace:SkelAppliences.ViewModels"
+             x:DataType="local:MainViewModel"
              x:Class="SkelAppliences.MainPage"
              
              BackgroundColor="Black">
@@ -13,13 +13,13 @@
             <CollectionView x:Name="MessagesList"
                             ItemsSource="{Binding Messages}">
                 <CollectionView.ItemTemplate>
-                    <DataTemplate>
+                    <DataTemplate x:DataType="local:Message">
                         <Border Padding="10" Margin="5">
                             <Label Text="{Binding Text}" TextColor="White" />
                         </Border>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
-                <!-- Добавлен Swipe Gesture -->
+                <!-- Swipe Gesture -->
                 <CollectionView.GestureRecognizers>
                     <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped"/>
                 </CollectionView.GestureRecognizers>
@@ -27,7 +27,11 @@
 
             <!-- Поле ввода + кнопки -->
             <Grid Grid.Row="1" ColumnDefinitions="*, Auto, Auto">
-                <Entry x:Name="MessageEntry" Placeholder="Введите сообщение..." />
+                <Entry x:Name="MessageEntry" 
+                       Placeholder="Введите сообщение..." 
+                       TextColor="White" 
+                       Text="{Binding MessageText, Mode=TwoWay}" />
+
                 <Button Text="📩" Clicked="SendMessage_Clicked" Grid.Column="1" />
                 <Button Text="🎙" Clicked="RecordVoice_Clicked" Grid.Column="2" />
             </Grid>
