--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,36 +1,54 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:SkelAppliences.ViewModels"
+             xmlns:converters="clr-namespace:SkelAppliences.Converters"
              x:DataType="local:MainViewModel"
              x:Class="SkelAppliences.MainPage"
-             
              BackgroundColor="Black">
+
+    <!-- Ресурсы страницы -->
+    <ContentPage.Resources>
+        <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
+    </ContentPage.Resources>
 
     <ScrollView>
         <Grid RowDefinitions="*, Auto">
 
             <!-- Список сообщений -->
-            <CollectionView x:Name="MessagesList"
-                            ItemsSource="{Binding Messages}">
+            <CollectionView x:Name="MessagesList" ItemsSource="{Binding Messages}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="local:Message">
-                        <Border Padding="10" Margin="5">
-                            <Label Text="{Binding Text}" TextColor="White" />
-                        </Border>
+                        <Grid RowDefinitions="Auto, Auto" Margin="5">
+
+                            <!-- Обычное сообщение -->
+                            <Border Padding="10" BackgroundColor="Gray" 
+                                    IsVisible="{Binding IsProduct, Converter={x:Static converters:InverseBoolConverter.Instance}}">
+                                <Label Text="{Binding Text}" TextColor="White" />
+                            </Border>
+
+                            <!-- Продуктовое сообщение -->
+                            <Border Padding="10" BackgroundColor="DarkGray" IsVisible="{Binding IsProduct}">
+                                <Grid RowDefinitions="Auto, Auto" ColumnDefinitions="Auto, *">
+                                    <!--<Image Source="{Binding ProductImage}" WidthRequest="50" HeightRequest="50" Grid.RowSpan="2" /> -->
+                                    <Label Text="{Binding ProductName}" FontAttributes="Bold" TextColor="White" Grid.Column="1" />
+                                    <Label Text="{Binding ProductDetails}" TextColor="White" Grid.Row="1" Grid.Column="1" />
+                                </Grid>
+                            </Border>
+
+                        </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
+
                 <!-- Swipe Gesture -->
                 <CollectionView.GestureRecognizers>
-                    <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped"/>
+                    <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped" />
                 </CollectionView.GestureRecognizers>
             </CollectionView>
 
             <!-- Поле ввода + кнопки -->
             <Grid Grid.Row="1" ColumnDefinitions="*, Auto, Auto">
-                <Entry x:Name="MessageEntry" 
-                       Placeholder="Введите сообщение..." 
-                       TextColor="White" 
-                       Text="{Binding MessageText, Mode=TwoWay}" />
+                <Entry x:Name="MessageEntry" Placeholder="Введите сообщение..." 
+                       TextColor="White" Text="{Binding MessageText, Mode=TwoWay}" />
 
                 <Button Text="📩" Clicked="SendMessage_Clicked" Grid.Column="1" />
                 <Button Text="🎙" Clicked="RecordVoice_Clicked" Grid.Column="2" />
