--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -5,7 +5,23 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:SkelAppliences"
     Shell.FlyoutBehavior="Flyout"
-    Title="SkelAppliences">
+    Title="SkelAppliences"
+    BackgroundColor="#343434">
+
+    <Shell.TitleView>
+        <Grid             
+            HorizontalOptions="FillAndExpand" 
+            VerticalOptions="Center">
+            
+            <Label 
+                Text="SKELPOSS" 
+                FontSize="25"
+                TextColor="#949494"
+                HorizontalOptions="Start"
+                Margin="20,0,0,0"
+                VerticalOptions="Center"/>
+        </Grid>
+    </Shell.TitleView>
 
     <!-- Главное окно (Чат) -->
     <FlyoutItem Title="Чат">
