--- a/NewsPage.xaml
+++ b/NewsPage.xaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SkelAppliences.NewsPage"
              
-             BackgroundColor="Black">
+             BackgroundColor="#1B1818">
     
     <ScrollView>
         <StackLayout Padding="10">
