--- a/NewsPage.xaml
+++ b/NewsPage.xaml
@@ -1,20 +1,25 @@
-﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SkelAppliences.NewsPage"
-             
              BackgroundColor="#1B1818">
-    
+
     <ScrollView>
         <StackLayout Padding="10">
             <Label Text="Новости" FontSize="24" FontAttributes="Bold" TextColor="White" />
             <Label Text="📢 Последние новости о технике..." TextColor="White" />
-            <!-- Здесь API с новостями -->
 
+            <!-- Индикатор загрузки новостей -->
+            <ActivityIndicator x:Name="LoadingIndicator" IsRunning="False" Color="White" IsVisible="False"/>
+
+            <!-- Контейнер для карточек новостей -->
+            <StackLayout x:Name="NewsContainer" Spacing="10"/>
+
+            <!-- Обработка свайпа для обновления новостей -->
             <StackLayout.GestureRecognizers>
                 <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped"/>
             </StackLayout.GestureRecognizers>
         </StackLayout>
-        
     </ScrollView>
-    
+
 </ContentPage>
