--- a/NewsPage.xaml
+++ b/NewsPage.xaml
@@ -6,19 +6,34 @@
 
     <ScrollView>
         <StackLayout Padding="10">
-            <Label Text="Новости" FontSize="24" FontAttributes="Bold" TextColor="White" />
-            <Label Text="📢 Последние новости о технике..." TextColor="White" />
-
-            <!-- Индикатор загрузки новостей -->
-            <ActivityIndicator x:Name="LoadingIndicator" IsRunning="False" Color="White" IsVisible="False"/>
-
-            <!-- Контейнер для карточек новостей -->
-            <StackLayout x:Name="NewsContainer" Spacing="10"/>
-
-            <!-- Обработка свайпа для обновления новостей -->
+            <!-- Жесты свайпа для всей области -->
             <StackLayout.GestureRecognizers>
+                <SwipeGestureRecognizer Direction="Down" Swiped="OnSwiped"/>
                 <SwipeGestureRecognizer Direction="Right" Swiped="OnSwiped"/>
             </StackLayout.GestureRecognizers>
+
+            <!-- Заголовок -->
+            <Label Text="Новости" 
+                   FontSize="24" 
+                   FontAttributes="Bold" 
+                   TextColor="White" />
+
+            <Label Text="📢 Последние новости..." 
+                   TextColor="White" />
+
+            <!-- Индикатор загрузки -->
+            <ActivityIndicator x:Name="LoadingIndicator"
+                               IsRunning="False"
+                               Color="White"
+                               IsVisible="False"
+                               HorizontalOptions="Center"
+                               VerticalOptions="Center"/>
+
+            <!-- Контейнер для новостей -->
+            <StackLayout x:Name="NewsContainer" 
+                         Spacing="10"
+                         VerticalOptions="Start"/>
+
         </StackLayout>
     </ScrollView>
 
