--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -34,11 +34,11 @@
         </Grid>
     </Shell.TitleView>
 
-    <FlyoutItem Title="Chat">
+    <FlyoutItem Title="🔎 Chat">
         <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
     </FlyoutItem>
 
-    <FlyoutItem Title="News">
+    <FlyoutItem Title="📢 News">
         <ShellContent ContentTemplate="{DataTemplate local:NewsPage}" />
     </FlyoutItem>
 
