--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,13 +1,15 @@
 ﻿<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:TechnoPoss.ViewModels"
+             xmlns:local="clr-namespace:TechnoPoss"
+             xmlns:viewModels="clr-namespace:TechnoPoss.ViewModels"
              xmlns:converters="clr-namespace:TechnoPoss.Converters"
-             x:DataType="local:MainViewModel"
+             x:DataType="viewModels:MainViewModel"
              x:Class="TechnoPoss.MainPage"
              BackgroundColor="#1B1818">
 
     <ContentPage.Resources>
         <converters:InverseBoolConverter x:Key="InverseBoolConverter" />
+        <local:BoolToMicTextConverter x:Key="BoolToMicTextConverter" />
     </ContentPage.Resources>
 
     <Grid RowDefinitions="*, Auto">
@@ -32,7 +34,7 @@
                               ItemsSource="{Binding Messages}"
                               Margin="0,15,0,20">
                     <CollectionView.ItemTemplate>
-                        <DataTemplate x:DataType="local:Message">
+                        <DataTemplate x:DataType="viewModels:Message">
                             <Grid RowDefinitions="Auto, Auto" Margin="0,8">
                                 <!-- Сообщение пользователя -->
                                 <Border 
@@ -55,7 +57,6 @@
                                       ColumnDefinitions="Auto,*"
                                       ColumnSpacing="8"
                                       Margin="8,0,8,0">
-
                                     <Image Source="profile_oposs.jpg"
                                            Grid.Column="0"
                                            WidthRequest="40"
@@ -98,7 +99,6 @@
              BackgroundColor="#1B1818"
              RowSpacing="10"
              ColumnSpacing="10">
-
             <Entry x:Name="MessageEntry" 
                  Placeholder="Message..." 
                  TextColor="White" 
@@ -109,24 +109,24 @@
                  HeightRequest="50"/>
 
             <Button Grid.Column="1"
-                  Text="➜"
-                  Clicked="SendMessage_Clicked"
-                  BackgroundColor="#404040"
-                  TextColor="White"
-                  FontSize="16"
-                  CornerRadius="25"
-                  WidthRequest="50"
-                  HeightRequest="50"/>
+                    Text="➜"
+                    Command="{Binding SendMessageCommand}"
+                    BackgroundColor="#404040"
+                    TextColor="White"
+                    FontSize="16"
+                    CornerRadius="25"
+                    WidthRequest="50"
+                    HeightRequest="50"/>
 
             <Button Grid.Column="2"
-                  Text="🎙"
-                  Clicked="RecordVoice_Clicked"
-                  BackgroundColor="#404040"
-                  TextColor="White"
-                  FontSize="16"
-                  CornerRadius="25"
-                  WidthRequest="50"
-                  HeightRequest="50"/>
+                    Text="{Binding IsRecording, Converter={StaticResource BoolToMicTextConverter}, FallbackValue='🎙'}"
+                    Command="{Binding RecordVoiceCommand}"
+                    BackgroundColor="#404040"
+                    TextColor="White"
+                    FontSize="16"
+                    CornerRadius="25"
+                    WidthRequest="50"
+                    HeightRequest="50"/>
         </Grid>
     </Grid>
 </ContentPage>
