--- a/NewsPage.xaml
+++ b/NewsPage.xaml
@@ -45,13 +45,20 @@
                 Text="🔄"
                 FontSize="16"
                 TextColor="White"
-                BackgroundColor="#2D2D2D"
-                CornerRadius="12"
+                BackgroundColor="#343434"
+                CornerRadius="15"
                 Padding="10"
                 WidthRequest="40"
                 HeightRequest="40"
                 AbsoluteLayout.LayoutFlags="PositionProportional"
                 AbsoluteLayout.LayoutBounds="0.95,0.015,AutoSize,AutoSize"
-                Clicked="OnRefreshButtonClicked"/>
+                Clicked="OnRefreshButtonClicked">
+            <Button.Shadow>
+                <Shadow Brush="#000000"
+                        Radius="10"
+                        Opacity="0.5"
+                        Offset="3,3"/>
+            </Button.Shadow>
+        </Button>
     </AbsoluteLayout>
 </ContentPage>
