--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -33,6 +33,42 @@
                                 Grid.Row="1"
                                 ItemsSource="{Binding Messages}"
                                 Margin="0,15,0,20">
+
+                    <CollectionView.Header>
+                        <Grid HorizontalOptions="Start"
+                              ColumnDefinitions="Auto,*"
+                              ColumnSpacing="8"
+                              Margin="8,8,8,0">
+                            <Image Source="profile_oposs.jpg"
+                                   Grid.Column="0"
+                                   WidthRequest="40"
+                                   HeightRequest="40"
+                                   Aspect="AspectFill">
+                                <Image.Clip>
+                                    <EllipseGeometry Center="20,20" RadiusX="20" RadiusY="20"/>
+                                </Image.Clip>
+                            </Image>
+
+                            <Border Grid.Column="1"
+                                    Padding="12"
+                                    BackgroundColor="#343434"
+                                    StrokeShape="RoundRectangle 15"
+                                    StrokeThickness="0">
+                                <Border.Shadow>
+                                    <Shadow Brush="#000000"
+                                            Offset="2,2"
+                                            Radius="10"
+                                            Opacity="0.5"/>
+                                </Border.Shadow>
+                                <Image Source="long_hello_oposs.jpg"
+                                       Aspect="AspectFill"
+                                       HeightRequest="200"
+                                       WidthRequest="300"
+                                       HorizontalOptions="Start"/>
+                            </Border>
+                        </Grid>
+                    </CollectionView.Header>
+
                     <CollectionView.ItemTemplate>
                         <DataTemplate x:DataType="viewModels:Message">
                             <Grid RowDefinitions="Auto" Margin="0,10,0,0">
