--- a/AboutPage.xaml
+++ b/AboutPage.xaml
@@ -72,7 +72,7 @@
                            TextColor="#A0A0A0"
                            HorizontalOptions="Center"/>
 
-                    <Label Text="В рамках проекта по разработке бытовой техники была проведена серия работ, направленных на улучшение функциональности и удобства использования продукции. В первую очередь, осуществлено проектирование и тестирование новых моделей кухонных приборов, включая интеллектуальные мультиварки и энергоэффективные холодильники."
+                    <Label Text="Чат-бот для выбора бытовой техники — интеллектуальный помощник, использующий Retrieval-Augmented Generation (RAG) и современные ИИ-технологии для поиска и подбора товаров. Он анализирует информацию с сайтов продавцов и обзоров, формируя точные рекомендации. Пользователь может взаимодействовать с системой через текстовый и голосовой интерфейсы, а логический агент на основе LangChain помогает сравнивать модели и подбирать технику по заданным параметрам."
                            FontSize="16"
                            TextColor="#A0A0A0"
                            HorizontalOptions="Fill"
